--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hi there!</h1>
