changed the location of 'Gemiddelde berekenen' to in the portfolio > portfolio-websites for a cleaner look.

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -9,7 +9,7 @@
     <h5>My name is horstandr, and I like to make web applications in my spare time!</h5>
     <h2>Look what I have done already!</h2>
     <div class="portfolio-show">
-        <a href="..\Gemiddelde berekenen\index.html" target="_blank">
+        <a href="portfolio-websites/Gemiddelde berekenen/index.html" target="_blank">
             <div class="portfolio-tile">
                 <img src="portfolio-images\website1.png" alt="An image of an website"/>
                 <div class="portfolio-desc">
