Horstandr Portfolio - 20 feb. 2024 v 0.1.5 (Bugfix & New Features & Changelog)
New features:
1. The portfolio has an all new look! A spicy new background, together with new content. ✨✨✨
2.  A new website is added to the portfolio! The new to do website can help you get stuff done. It is currently under development, but you can use it around Friday. The picture will be changed to an updated version.
3. Gemiddelde berekenen got another update: the color theme is now more constistent.

Bug fixes:
1. Fixed sizing in the homepage
2. Made the 'Gemiddelde berekenen' website work.

Other changes:
1. Changed the name of the website1.png file so that the naming makes sense. Note: This shows up as a delete and make, but this is only a rename.
2. Added comments to the portfolio CSS file.
3. Changed the background of tile one to match the image that didn't want to be positioned.

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -5,19 +5,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hi there!</h1>
-    <h5>My name is horstandr, and I like to make web applications in my spare time!</h5>
-    <h2>Look what I have done already!</h2>
+    <div class="intro">
+        <h1>Hi there!</h1>
+        <h3>My name is horstandr, and I like to make web applications in my spare time!</h3>
+        <h2>Look what I have done already!</h2>
+    </div>
     <div class="portfolio-show">
-        <a href="portfolio-websites/Gemiddelde berekenen/index.html" target="_blank">
-            <div class="portfolio-tile">
-                <img src="portfolio-images\website1.png" alt="An image of an website"/>
+            <div class="portfolio-tile tile1">
+                <a href="portfolio-websites/Gemiddelde berekenen/index.html" target="_blank">
+                <img src="portfolio-images\gemiddelde-berekenen.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>Gemiddelde berekenen (Calculate average)</h6>
-                    <p>This website calculates the average number</p>
                 </div>
+                </a>
             </div>
-        </a>
+            <div class="portfolio-tile tile2">
+                <a href="portfolio-websites/To do list/index.html" target="_blank">
+                <img src="portfolio-images\to-do-app.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>To do app</h6>
+                </div>
+                </a>
+            </div>
     </div>
 </body>
 </html>
