Changed the file names and links so that the .html doesn't pop up at the end of a URL. This doesn't work locally anymore.

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -12,7 +12,7 @@
     </div>
     <div class="portfolio-show">
             <div class="portfolio-tile tile1">
-                <a href="portfolio-websites/Gemiddelde berekenen/index.html" target="_blank">
+                <a href="portfolio-websites/Gemiddelde berekenen/gemiddelde-berekenen" target="_blank">
                 <img src="portfolio-images\gemiddelde-berekenen.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>Gemiddelde berekenen (Calculate average)</h6>
@@ -20,7 +20,7 @@
                 </a>
             </div>
             <div class="portfolio-tile tile2">
-                <a href="portfolio-websites/To do list/index.html" target="_blank">
+                <a href="portfolio-websites/To do list/to-do-list" target="_blank">
                 <img src="portfolio-images\to-do-app.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>To do app</h6>
