--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -4,7 +4,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="startTime()">
     <div class="intro">
         <h1>Hi there!</h1>
         <h3>My name is horstandr, and I like to make web applications in my spare time!</h3>
@@ -12,7 +12,7 @@
     </div>
     <div class="portfolio-show">
             <div class="portfolio-tile tile1">
-                <a href="portfolio-websites/Gemiddelde berekenen/gemiddelde-berekenen" target="_blank">
+                <a href="portfolio-websites/Gemiddelde-berekenen/gemiddelde-berekenen" target="_blank">
                 <img src="portfolio-images\gemiddelde-berekenen.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>Gemiddelde berekenen (Calculate average)</h6>
@@ -20,13 +20,70 @@
                 </a>
             </div>
             <div class="portfolio-tile tile2">
-                <a href="portfolio-websites/To do list/to-do-list" target="_blank">
+                <a href="portfolio-websites/To-do-list/to-do-list" target="_blank">
                 <img src="portfolio-images\to-do-app.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>To do app</h6>
                 </div>
                 </a>
             </div>
+            <div class="portfolio-tile tile3">
+                <a href="portfolio-websites/digital-clock/digital-clock.html" target="_blank">
+                <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>To do app</h6>
+                </div>
+                </a>
+            </div>
+            <div class="portfolio-tile tile3">
+                <a href="portfolio-websites/digital-clock/digital-clock.html" target="_blank">
+                <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>To do app</h6>
+                </div>
+                </a>
+            </div>
+            <div class="portfolio-tile tile3">
+                <a href="portfolio-websites/digital-clock/digital-clock.html" target="_blank">
+                <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>To do app</h6>
+                </div>
+                </a>
+            </div>
+            <div class="portfolio-tile tile3">
+                <a href="portfolio-websites/digital-clock/digital-clock.html" target="_blank">
+                <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>To do app</h6>
+                </div>
+                </a>
+            </div>
+            <div class="portfolio-tile tile3">
+                <a href="portfolio-websites/digital-clock/digital-clock.html" target="_blank">
+                <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>To do app</h6>
+                </div>
+                </a>
+            </div>
+            <div class="portfolio-tile tile3">
+                <a href="portfolio-websites/digital-clock/digital-clock.html" target="_blank">
+                <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>To do app</h6>
+                </div>
+                </a>
+            </div>
+            <div class="portfolio-tile tile3">
+                <a href="portfolio-websites/digital-clock/digital-clock.html" target="_blank">
+                <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>To do app</h6>
+                </div>
+                </a>
+            </div>
     </div>
+    <script src="script-clock.js"></script>
 </body>
 </html>
