Name of clock is now correct

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -31,7 +31,7 @@
                 <a href="portfolio-websites/digital-clock/digital-clock.html" target="_blank">
                 <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
-                    <h3>To do app</h6>
+                    <h3>Digital Clock</h6>
                 </div>
                 </a>
             </div>
