Bugfix: The todo app now shows as NOT WORKING

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -23,7 +23,7 @@
                 <a href="portfolio-websites/To-do-list/to-do-list" target="_blank">
                 <img src="portfolio-images\to-do-app.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
-                    <h3>To do app</h6>
+                    <h3 class="h3todo">To do app (NOT WORKING)</h3>
                 </div>
                 </a>
             </div>
@@ -31,7 +31,7 @@
                 <a href="portfolio-websites/digital-clock/digital-clock.html" target="_blank">
                 <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
-                    <h3>Digital Clock</h6>
+                    <h3>Digital Clock</h3>
                 </div>
                 </a>
             </div>
