Added a counter for how many times a user has visited the homepage in the **title bar**. This can be changed by deleting cookies.

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title id="amount">Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="startTime()">
+<body onload="saveData()">
     <div class="intro">
         <h1>Hi there!</h1>
         <h3>My name is horstandr, and I like to make web applications in my spare time!</h3>
@@ -37,4 +37,5 @@
             </div>
     </div>
 </body>
+<script src="script.js"></script>
 </html>
