V 0.1.7.1-small - HorstAndr Portfolio - 21 feb. 2024 Changelog:
1. Added a uniform font across all websites.
2. Fixed 'Gemiddelde berekenen', it now outputs a window alert instead of 'NaN'.
3. Added a laptop favicon to every website. Probably going to change it for my logo, as soon as I got it.

--- a/portfolio/portfolio-websites/To-do-list/to-do-list.html
+++ b/portfolio/portfolio-websites/To-do-list/to-do-list.html
@@ -3,6 +3,7 @@
 <head>
     <title>To do list</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="../../portfolio-images/portfolio-favicon/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
     <div class="heading-div" id="heading-div">
