--- a/portfolio/portfolio-websites/digital-clock/digital-clock.html
+++ b/portfolio/portfolio-websites/digital-clock/digital-clock.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="style-clock.css">
 <script src="script-clock.js"></script>
+<title>Digital clock</title>
+<link rel="shortcut icon" href="../../portfolio-images/portfolio-favicon/favicon-32x32.png" type="image/x-icon">
 <body onload="startTime()">
     <h2>Digital Clock</h2>
     <div class="clockdiv">
