--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <title id="amount">Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./portfolio-images/portfolio-favicon/favicon-32x32.png" type="image/x-icon">
 </head>
 <body onload="saveData()">
     <div class="intro">
