V 0.1.8 - HorstAndr Portfolio - 21 feb. 2024
It's finally here! Smooth button animations on the homepage! There is a new color theme for every application, and they change! Calculate average also got an update, the buttons are now uniform and there is an English option!

New changes:
1. Made the hover animations look smoother on the homepage.
2. Made the button in 'Gemiddelde berekenen' yellow when selecting.
3. Updated the picture of 'Gemiddelde berekenen' on the homepage.
4. Edited the error message in 'Gemiddelde berekenen' from an alert to the field being empty.
5. Made the 'Gemiddelde berekenen' 'Bereken' button blue and dark blue on press.
6. Added a language switcher on the top right side of 'Gemiddelde berekenen'.
7. Changed the hover effects on the homepage to get along with the new colour scheme in 'Gemiddelde berekenen'.
8. Changed the default link from 'nl' to 'en' to match the image.
9. Changed the Calculate Average text on the homepage to only contain English.
10. Renamed all the Calculate Average files to English.

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -13,10 +13,10 @@
     </div>
     <div class="portfolio-show">
             <div class="portfolio-tile tile1">
-                <a href="portfolio-websites/Gemiddelde-berekenen/gemiddelde-berekenen" target="_blank">
-                <img src="portfolio-images\gemiddelde-berekenen.png" alt="An image of an website" id="image"/>
+                <a href="portfolio-websites/Gemiddelde-berekenen/en-gemiddelde-berekenen" target="_blank">
+                <img src="portfolio-images/calculate-average.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
-                    <h3>Gemiddelde berekenen (Calculate average)</h6>
+                    <h3>Calculate average</h6>
                 </div>
                 </a>
             </div>
