--- a/portfolio/portfolio-websites/Gemiddelde-berekenen/en-calculate-average.html
+++ b/portfolio/portfolio-websites/Gemiddelde-berekenen/en-calculate-average.html
@@ -8,19 +8,24 @@
     <link rel="shortcut icon" href="../../portfolio-images/portfolio-favicon/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
+    <div class="language-switcher">
+        <a href="nl-calculate-average">NL</a>
+        <div vert-line></div>
+        <a href="">EN</a>
+    </div>
     <div class="body">
-        <h1>Gemiddelde Berekenen</h1>
-        <p>Bereken hier je gemiddelde cijfer!</p>
+        <h1>Calculate average</h1>
+        <p>Calculate your average number down below:</p>
         <div>
             <form action="javascript:Calculate()">
-                <p>Voer hier je cijfers in (je hoeft ze niet allemaal in te vullen):</p><br>
-                <textarea name="number1" id="id1" cols="2" rows="1"></textarea>
-                <textarea name="number2" id="id2" cols="2" rows="1" ></textarea>
+                <p>Fill in your numbers here:</p><br>
+                <textarea name="number1" id="id1" cols="5" rows="1" placeholder="1"></textarea>
+                <textarea name="number2" id="id2" cols="5" rows="1" placeholder="2"></textarea>
                 <br>
-                <button onclick="js:Calculate()" coolbutton>Bereken</button>
+                <button onclick="js:Calculate()" coolbutton>Calculate</button>
             </form>
         </div>
-        <p>Resultaat:</p>
+        <p>result:</p>
         <div class="result" id="result"></div>
     </div>
 </body>
