set maxchar for calculate average

--- a/portfolio/portfolio-websites/Gemiddelde-berekenen/nl-calculate-average.html
+++ b/portfolio/portfolio-websites/Gemiddelde-berekenen/nl-calculate-average.html
@@ -19,8 +19,8 @@
         <div>
             <form action="javascript:Calculate()">
                 <p>Voer hier je cijfers in:</p><br>
-                <textarea name="number1" id="id1" cols="5" rows="1" placeholder="1"></textarea>
-                <textarea name="number2" id="id2" cols="5" rows="1" placeholder="2"></textarea>
+                <textarea name="number1" id="id1" cols="5" rows="1" placeholder="1" maxlength="6"></textarea>
+                <textarea name="number2" id="id2" cols="5" rows="1" placeholder="2" maxlength="6"></textarea>
                 <br>
                 <button onclick="js:Calculate()" coolbutton>Bereken</button>
             </form>
