--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -8,7 +8,7 @@
 <body onload="saveData()">
     <div class="intro">
         <h1>Hi there!</h1>
-        <h3>My name is horstandr, and I like to make web applications in my spare time!</h3>
+        <h3>My name is HorstAndr, and I like to make web applications in my spare time!</h3>
         <h2>Look what I have done already!</h2>
     </div>
     <div class="portfolio-show">
@@ -29,10 +29,18 @@
                 </a>
             </div>
             <div class="portfolio-tile tile3">
-                <a href="portfolio-websites/digital-clock/digital-clock.html" target="_blank">
+                <a href="portfolio-websites/digital-clock/digital-clock" target="_blank">
                 <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>Digital Clock</h3>
+                </div>
+                </a>
+            </div>
+            <div class="portfolio-tile tile4">
+                <a href="portfolio-websites/countdown-timer/countdown" target="_blank">
+                <img src="portfolio-images/countdown-timer.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>Countdown clock</h3>
                 </div>
                 </a>
             </div>
