--- a/portfolio/nl-portfolio.html
+++ b/portfolio/nl-portfolio.html
@@ -6,17 +6,20 @@
     <link rel="shortcut icon" href="./portfolio-images/portfolio-favicon/favicon-32x32.png" type="image/x-icon">
 </head>
 <body onload="saveData()">
+    <div class="language">
+        <p>NL|<strong><a href="/portfolio/en-portfolio.html" class="selector">EN</a></strong></p>
+    </div>
     <div class="intro">
-        <h1>Hi there!</h1>
-        <h3>My name is HorstAndr, and I like to make web applications in my spare time!</h3>
-        <h2>Look what I have done already!</h2>
+        <h1>Hoi!</h1>
+        <h3>Mijn naam is HorstAndr, en ik maak web applicaties in mijn vrije tijd!</h3>
+        <h2>Kijk eens naar wat ik allemaal al heb gedaan:</h2>
     </div>
     <div class="portfolio-show">
             <div class="portfolio-tile tile1">
                 <a href="portfolio-websites/Gemiddelde-berekenen/en-calculate-average" target="_blank">
                 <img src="portfolio-images/calculate-average.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
-                    <h3>Calculate average</h6>
+                    <h3>Gemiddelde berekenen</h6>
                 </div>
                 </a>
             </div>
@@ -32,7 +35,7 @@
                 <a href="portfolio-websites/digital-clock/digital-clock" target="_blank">
                 <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
-                    <h3>Digital Clock</h3>
+                    <h3>Digitale klok</h3>
                 </div>
                 </a>
             </div>
@@ -40,7 +43,7 @@
                 <a href="portfolio-websites/countdown-timer/countdown" target="_blank">
                 <img src="portfolio-images/countdown-timer.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
-                    <h3>Countdown clock</h3>
+                    <h3>Aftelklok</h3>
                 </div>
                 </a>
             </div>
@@ -48,7 +51,7 @@
                 <a href="portfolio-websites/weather-api/weather.html" target="_blank">
                 <img src="portfolio-images/weather-api.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
-                    <h3>Weather App</h3>
+                    <h3>Weer app</h3>
                 </div>
                 </a>
             </div>
