--- a/portfolio/portfolio-websites/To-do-list/to-do-list.html
+++ b/portfolio/portfolio-websites/To-do-list/to-do-list.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>To do list</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To Do List</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="../../portfolio-images/portfolio-favicon/favicon-32x32.png" type="image/x-icon">
+    <script src="script.js" defer></script>
 </head>
-<body>
-    <div class="heading-div" id="heading-div">
-        <h1 class="heading" id="heading">To do list</h1>
-        <h3 class="subheading" id="subheading">A very lovely to do list to check off all your needs</h3>
+<body onload="updateApp()">
+    <div class="body">
+        <h1 class="title">To Do List</h1>
+        <form action="">
+        <input type="text" placeholder="To do item..." id="item"/>
+        <button type="submit">Add item</button>
+        </form>
+        <button onclick="resetToDo()">Reset</button>
+        <div class="container" id="container">
+            <!-- All the to do items go here -->
+        </div>
     </div>
-    <div class="todolist-div" id="todolist-div">
-        <ol class="todolist" id="todolist">
-            <li>To do</li>
-        </ol>
-    </div>
+    
 </body>
 </html>
