HorstAndr web-projects - V 0.1.9 - 7.6.2024
NEW APP ALERT: There is a BMI calulator added. Check your health easily with this calculator!

Bug fixes:
- Updated API key on weather app, it now works again.
- The weather emoji is now an image.

--- a/portfolio/en-portfolio.html
+++ b/portfolio/en-portfolio.html
@@ -55,6 +55,14 @@
                 </div>
                 </a>
             </div>
+            <div class="portfolio-tile tile6">
+                <a href="portfolio-websites/bmi/bmi-en.html" target="_blank">
+                <img src="portfolio-images/bmi-en.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>BMI calculator</h3>
+                </div>
+                </a>
+            </div>
     </div>
 </body>
 <script src="script.js"></script>
