--- a/portfolio/nl-portfolio.html
+++ b/portfolio/nl-portfolio.html
@@ -16,7 +16,7 @@
     </div>
     <div class="portfolio-show">
             <div class="portfolio-tile tile1">
-                <a href="portfolio-websites/Gemiddelde-berekenen/en-calculate-average" target="_blank">
+                <a href="portfolio-websites/Gemiddelde-berekenen/nl-calculate-average" target="_blank">
                 <img src="portfolio-images/calculate-average.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>Gemiddelde berekenen</h6>
@@ -52,6 +52,14 @@
                 <img src="portfolio-images/weather-api.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>Weer app</h3>
+                </div>
+                </a>
+            </div>
+            <div class="portfolio-tile tile6">
+                <a href="portfolio-websites/bmi/bmi-nl.html" target="_blank">
+                <img src="portfolio-images/bmi-nl.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>BMI berekenen</h3>
                 </div>
                 </a>
             </div>
