--- a/portfolio/nl-portfolio.html
+++ b/portfolio/nl-portfolio.html
@@ -27,7 +27,7 @@
                 <a href="portfolio-websites/To-do-list/to-do-list" target="_blank">
                 <img src="portfolio-images\to-do-app.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
-                    <h3 class="h3todo">To do app (NOT WORKING)</h3>
+                    <h3 class="h3todo">To do app</h3>
                 </div>
                 </a>
             </div>
