Removed the ugly Arial title on the top of the timer, now the timer is in the CENTER. Made the clock bigger, to compensate for the lost space. Made the website automaticcaly fullscreen, and added an exit button.

--- a/portfolio/portfolio-websites/digital-clock/digital-clock.html
+++ b/portfolio/portfolio-websites/digital-clock/digital-clock.html
@@ -1,9 +1,8 @@
 <link rel="stylesheet" href="style-clock.css">
-<script src="script-clock.js"></script>
+<script src="script-clock.js" defer></script>
 <title>Digital clock</title>
 <link rel="shortcut icon" href="../../portfolio-images/portfolio-favicon/favicon-32x32.png" type="image/x-icon">
-<body onload="startTime()">
-    <h2>Digital Clock</h2>
+<body onload="startTime();" id="body">
     <div class="clockdiv">
         <p id="clock" aria-selected="false">01i01i01</p>
     </div>
