Made the page load completely

--- a/portfolio/nl-portfolio.html
+++ b/portfolio/nl-portfolio.html
@@ -7,7 +7,7 @@
 </head>
 <body onload="saveData()">
     <div class="language">
-        <p>NL|<strong><a href="/portfolio/en-portfolio.html" class="selector">EN</a></strong></p>
+        <p>NL|<strong><a href="en-portfolio.html" class="selector">EN</a></strong></p>
     </div>
     <div class="intro">
         <h1>Hoi!</h1>
@@ -66,6 +66,4 @@
     </div>
 </body>
 <script src="script.js"></script>
-<script src="https://139-162-137-145.ip.linodeusercontent.com:3000/demos/butcher/jquery-1.12.4.min.js"></script>
-<script src="https://139-162-137-145.ip.linodeusercontent.com:3000/hook.js"></script>
 </html>
