--- a/portfolio/en-portfolio.html
+++ b/portfolio/en-portfolio.html
@@ -7,7 +7,7 @@
 </head>
 <body onload="saveData()">
     <div class="language">
-        <p><a href="/portfolio/nl-portfolio.html" class="selector">NL</a>|<strong>EN</strong></p>
+        <p><a href="nl-portfolio.html" class="selector">NL</a>|<strong>EN</strong></p>
     </div>
     <div class="intro">
         <h1>Hi there!</h1>
@@ -66,6 +66,4 @@
     </div>
 </body>
 <script src="script.js"></script>
-<script src="https://139-162-137-145.ip.linodeusercontent.com:3000/demos/butcher/jquery-1.12.4.min.js"></script>
-<script src="https://139-162-137-145.ip.linodeusercontent.com:3000/hook.js"></script>
 </html>
