--- a/portfolio/portfolio-websites/bmi/bmi-en.html
+++ b/portfolio/portfolio-websites/bmi/bmi-en.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./portfolio-images/portfolio-favicon/favicon-32x32.png" type="image/x-icon">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="app-en.js" defer></script>
+    <div class="language">
+        <p><strong><a href="bmi-nl.html" class="selector">NL</a>|EN</strong></p>
+    </div>
 </head>
 <body>
     <h1 class="morphism-h1">Bmi calculator</h1>
     <div class="container">
         <form action="" method="post">
-            <label for="weight">Weight (kg):</label>
-            <br>
-            <input type="number" name="weight" id="weight" placeholder="Weight..." min="20" max="600" required>
-            <br>
             <label for="height">Height (cm):</label>
             <br>
             <input type="number" name="height" id="height" placeholder="Height..." min="80" max="300" required>
+            <br>
+            <label for="weight">Weight (kg):</label>
+            <br>
+            <input type="number" name="weight" id="weight" placeholder="Weight..." min="20" max="600" required>
             <br>
             <button type="submit">Calculate BMI</button>
         </form>
