--- a/portfolio/portfolio-websites/countdown-timer/countdown.html
+++ b/portfolio/portfolio-websites/countdown-timer/countdown.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Audio -->
+    <audio id="end-sound"><source src="end.mp3" type="audio/mpeg"></audio>
     <div class="body-form body" id="body-form">
         <for>
             <div class="date-div form-div">
                 <label for="date" class="datetimelab">Date and time:</label>
+                <br>
                 <input type="datetime-local" id="datetime" class="datetime">
             </div>
             <br>
