- Made the width of he bmi calculator container the same size in both languages, and made it  s p a c i o u s. - Changed the links in portfolio to have .html behind them, so that they work on download too. - Fixed the language switcher on the BMI calculator. - Added a home button to each page and removed target blank

--- a/portfolio/en-portfolio.html
+++ b/portfolio/en-portfolio.html
@@ -16,7 +16,7 @@
     </div>
     <div class="portfolio-show">
             <div class="portfolio-tile tile1">
-                <a href="portfolio-websites/Gemiddelde-berekenen/en-calculate-average" target="_blank">
+                <a href="portfolio-websites/Gemiddelde-berekenen/en-calculate-average.html" >
                 <img src="portfolio-images/calculate-average.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>Calculate average</h6>
@@ -24,7 +24,7 @@
                 </a>
             </div>
             <div class="portfolio-tile tile2">
-                <a href="portfolio-websites/To-do-list/to-do-list" target="_blank">
+                <a href="portfolio-websites/To-do-list/to-do-list.html" >
                 <img src="portfolio-images\to-do-app.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3 class="h3todo">To do app</h3>
@@ -32,7 +32,7 @@
                 </a>
             </div>
             <div class="portfolio-tile tile3">
-                <a href="portfolio-websites/digital-clock/digital-clock" target="_blank">
+                <a href="portfolio-websites/digital-clock/digital-clock.html" >
                 <img src="portfolio-images\digital-clock.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>Digital Clock</h3>
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <div class="portfolio-tile tile4">
-                <a href="portfolio-websites/countdown-timer/countdown" target="_blank">
+                <a href="portfolio-websites/countdown-timer/countdown.html" >
                 <img src="portfolio-images/countdown-timer.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>Countdown clock</h3>
@@ -48,7 +48,7 @@
                 </a>
             </div>
             <div class="portfolio-tile tile5">
-                <a href="portfolio-websites/weather-api/weather.html" target="_blank">
+                <a href="portfolio-websites/weather-api/weather.html" >
                 <img src="portfolio-images/weather-api.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>Weather App</h3>
@@ -56,7 +56,7 @@
                 </a>
             </div>
             <div class="portfolio-tile tile6">
-                <a href="portfolio-websites/bmi/bmi-en.html" target="_blank">
+                <a href="portfolio-websites/bmi/bmi-en.html" >
                 <img src="portfolio-images/bmi-en.png" alt="An image of an website" id="image"/>
                 <div class="portfolio-desc">
                     <h3>BMI calculator</h3>
