--- a/portfolio/portfolio-websites/bmi/bmi-en.html
+++ b/portfolio/portfolio-websites/bmi/bmi-en.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="app-en.js" defer></script>
     <div class="language">
-        <p><strong><a href="bmi-nl.html" class="selector">NL</a>|EN</strong></p>
+        <p class="language-selector"><a href="bmi-nl.html" class="selector">NL&nbsp;</a>| EN</p>
     </div>
 </head>
 <body>
