--- a/portfolio/portfolio-websites/bmi/bmi-nl.html
+++ b/portfolio/portfolio-websites/bmi/bmi-nl.html
@@ -7,11 +7,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="app-nl.js" defer></script>
-    <div class="language">
-        <p><strong></strong>NL|<a href="bmi-en.html" class="selector">EN</a></strong></p>
-    </div>
+    
 </head>
 <body>
+    <div class="home-button">
+        <a class="home-text" href="/portfolio/nl-portfolio.html">&LeftArrow;&nbsp;Home</a>
+    </div>
+    <div class="language">
+        <p class="language-selector">NL |<a href="bmi-en.html" class="selector">&nbsp;EN</a></p>
+    </div>
     <h1 class="morphism-h1">Bmi berekenen</h1>
     <div class="container">
         <form action="" method="post">
