--- a/portfolio/nl-portfolio.html
+++ b/portfolio/nl-portfolio.html
@@ -63,6 +63,22 @@
                 </div>
                 </a>
             </div>
+            <div class="portfolio-tile tile7">
+                <a href="portfolio-websites/hangman/en-hangman.html" >
+                <img src="portfolio-images/weather-api.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>Galgje (BETA!)</h3>
+                </div>
+                </a>
+            </div>
+            <div class="portfolio-tile tile8">
+                <a href="portfolio-websites/love-tester/index.html" >
+                <img src="portfolio-images/love-tester.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>Love Tester (BETA!)</h3>
+                </div>
+                </a>
+            </div>
     </div>
 </body>
 <script src="script.js"></script>
