Made love getter better - Made hangman better

--- a/portfolio/portfolio-websites/love-tester/index.html
+++ b/portfolio/portfolio-websites/love-tester/index.html
@@ -11,10 +11,10 @@
     <div class="container">
         <form action="" id="form">
             <label for="name1">Name 1:</label>
-            <input type="text" placeholder="name1" id="name1">
+            <input type="text" placeholder="put here..." id="name1">
             <br>
             <label for="name2">Name 2:</label>
-            <input type="text" placeholder="name2" id="name2">
+            <input type="text" placeholder="put here..." id="name2">
             <br>
             <br>
             <button type="submit">Check love!</button>
