--- a/portfolio/portfolio-websites/hangman/game/game.html
+++ b/portfolio/portfolio-websites/hangman/game/game.html
@@ -9,6 +9,9 @@
 </head>
 <body onload="onLoad()">
     <div class="container">
+        <div class="language">
+            <h1 id="current-language"></h1>
+        </div>
         <div class="hangman-image"><img src="" alt="" /></div>
         <div class="word-input-container">
             <div class="blank-words" id="words"></div>
