--- a/portfolio/portfolio-websites/hangman/en-hangman.html
+++ b/portfolio/portfolio-websites/hangman/en-hangman.html
@@ -10,7 +10,7 @@
     <form method="GET" id="form" action="/web-projects/portfolio/portfolio-websites/hangman/game/game.html">
         <label for="lang">Type in your language in 2 letters. <br> Available languages:</label>
         <br>
-        <span id="available-lang">en, it, es, sdf</span>
+        <span id="available-lang">Looking for languages...f</span>
         <br>
         <input type="text" name="lang" id="lang" maxlength="2" placeholder="Lang..."/>
         <button type="submit">Start game!</button>
