--- a/portfolio/portfolio-websites/tic tac toe/index.html
+++ b/portfolio/portfolio-websites/tic tac toe/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="board" id="board">
+        Hey there! This is tic tac toe
         <div class="space"><button id="A1" onclick="makeMove('A1');"></button></div>
         <div class="space"><button id="A2" onclick="makeMove('A2');"></button></div>
         <div class="space"><button id="A3" onclick="makeMove('A3');"></button></div>
