--- a/portfolio/nl-portfolio.html
+++ b/portfolio/nl-portfolio.html
@@ -79,6 +79,14 @@
                 </div>
                 </a>
             </div>
+            <div class="portfolio-tile tile9"></div>
+                <a href="portfolio-websites/quiz/index.html" >
+                <img src="portfolio-images/love-tester.png" alt="An image of an website" id="image"/>
+                <div class="portfolio-desc">
+                    <h3>Quiz</h3>
+                </div>
+                </a>
+            </div>
     </div>
 </body>
 <script src="script.js"></script>
